<resources>
    <string name="app_name">Sport Recorder</string>
    <string name="list_fragment_label">Sports</string>
    <string name="create_sport_fragment_label">Add new sport entry</string>
    <string name="new_entry">New entry</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name_desc">Fill sport name</string>
    <string name="name_hint">Name</string>
    <string name="place_desc">Fill sport place</string>
    <string name="place_hint">Place</string>
    <string name="duration_desc">Fill sport duration (min)</string>
    <string name="duration_hint">Duration</string>
    <string name="distance_desc">Fill sport distance (m)</string>
    <string name="distance_hint">Distance</string>
    <string name="storage_desc">Save entry to:</string>
    <string name="storage_local">Local database</string>
    <string name="storage_remote">Remote database</string>

    <string-array name="filter_options">
        <item>All</item>
        <item>Local</item>
        <item>Remote</item>
    </string-array>
</resources>